Tests added in ./test
